# paper-finder

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
paper_finder/: __init__.py  cli.py  config.py  errors.py  http.py  identifiers.py  models.py
paper_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
paper_finder/providers/: __init__.py  arxiv.py  semantic_scholar.py
tests/: test_arxiv_provider.py  test_cli.py  test_http.py  test_identifiers.py  test_semantic_scholar_provider.py  test_smoke.py
