[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-finder"
version = "0.1.0"
description = "Paper finder CLI for arXiv + Semantic Scholar"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="YangSuoze"}]
dependencies = [
  "typer[all]",
  "httpx",
  "pydantic",
  "rich"
]

[project.scripts]
paper-finder = "paper_finder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
